Melhorando o prompt no jupyter

--- a/google-colab/chatbot.ipynb
+++ b/google-colab/chatbot.ipynb
@@ -22,7 +22,7 @@
       "metadata": {
         "id": "2FjQow6oYyLu"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "ryGP_nYWZTj9"
       },
-      "execution_count": 36,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "2lcuN0whawx9"
       },
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -70,14 +70,35 @@
       "metadata": {
         "id": "F5CLOY6zcvsK"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "prompt = input(\"Quais livros da Companhia das Letras você mais gosta?\")\n",
-        "chat.send_message(f\"Aja como um livreiro. Eu quero que você sugira livros do grupo Companhia das Letras com base nos livros que eu vou dizer que gosto. Lembre-se que a Companhia das Letras tem muitos selos distintos: Objetiva, Zahar, Suma, Penguin, ... {prompt}\")\n",
+        "prompt = \"\"\"\n",
+        "Aja como um livreiro. Sugira livros do que sejam similares aos livros que o leitor gosta.\n",
+        "\n",
+        "    Leitor: Rápido e Devagar\n",
+        "    Livreiro:\n",
+        "    - \"Nudge\" por Richard H. Thaler e Cass R. Sunstein\n",
+        "    - \"Viver com Risco\" por Alison Schrager\n",
+        "    - \"Preparados para o Risco\" por Gerd Gigerenzer\n",
+        "\n",
+        "    Leitor: Os três mosqueteiros\n",
+        "    Livreiro:\n",
+        "\n",
+        "    A resposta deve ser apenas um json valido no seguinte formato:\n",
+        "\n",
+        "    {\n",
+        "     [\n",
+        "       {\"index\": 0, \"title\": \"titulo do livro\", \"author\": \"nome dos autores separados por virgula\", \"image\": \"url para imagem da capa do livro\", \"description\": \"descricao do livro explicando porque foi recomendado\"}\n",
+        "     ]\n",
+        "    }\n",
+        "\"\"\"\n",
+        "user_prompt = input(\"Quais livros você mais gosta? \")\n",
+        "chat.send_message({prompt})\n",
+        "chat.send_message(f\"Livreiro: {user_prompt}\")\n",
         "\n",
         "#Imprimindo o histórico\n",
         "for message in chat.history:\n",
@@ -87,18 +108,18 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 602
+          "height": 832
         },
         "id": "YQgUAdhDbNUT",
-        "outputId": "832b3178-364e-4a58-df0f-c0b5bf9bc977"
+        "outputId": "c610524a-ff1b-4f7d-e1b7-eb22bf16d94f"
       },
-      "execution_count": 37,
+      "execution_count": 6,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Quais livros da Companhia das Letras você mais gosta?Rápido e Devagar, Nudge\n"
+            "Quais livros da Companhia das Letras você mais gosta? Sherlock Holmes\n"
           ]
         },
         {
@@ -107,7 +128,7 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **user**: Aja como um livreiro. Eu quero que você sugira livros do grupo Companhia das Letras com base nos livros que eu vou dizer que gosto. Lembre-se que a Companhia das Letras tem muitos selos distintos: Objetiva, Zahar, Suma, Penguin, ... Rápido e Devagar, Nudge"
+            "text/markdown": "> **user**: \n> Aja como um livreiro. Sugira livros do que sejam similares aos livros que o leitor gosta.\n> \n>     Leitor: Rápido e Devagar\n>     Livreiro: \n>     - \"Nudge\" por Richard H. Thaler e Cass R. Sunstein\n>     - \"Viver com Risco\" por Alison Schrager\n>     - \"Preparados para o Risco\" por Gerd Gigerenzer\n>     \n>     Leitor: Os três mosqueteiros\n>     Livreiro:\n>     \n>     A resposta deve ser apenas um json valido no seguinte formato:\n>     \n>     {\n>      [\n>        {\"index\": 0, \"title\": \"titulo do livro\", \"author\": \"nome dos autores separados por virgula\", \"image\": \"url para imagem da capa do livro\", \"description\": \"descricao do livro explicando porque foi recomendado\"}\n>      ]\n>     }\n"
           },
           "metadata": {}
         },
@@ -124,7 +145,41 @@
             "text/plain": [
               "<IPython.core.display.Markdown object>"
             ],
-            "text/markdown": "> **model**: **Livros que você gosta:**\n> \n> * Rápido e Devagar\n> * Nudge\n> \n> **Sugestões da Companhia das Letras:**\n> \n> **Selo Objetiva:**\n> \n> * **Pensar, Rápido e Devagar** (Daniel Kahneman): Uma exploração aprofundada dos dois sistemas de pensamento da mente humana.\n> * **O Paradoxo da Escolha** (Barry Schwartz): Um exame do impacto negativo do excesso de opções em nossas vidas.\n> * **O Poder do Hábito** (Charles Duhigg): Um guia prático para entender e mudar nossos hábitos.\n> \n> **Selo Zahar:**\n> \n> * **A Ciência da Felicidade** (Sonja Lyubomirsky): Um livro baseado em pesquisas que explora os fatores que contribuem para a felicidade.\n> * **Otimismo Racional** (Matt Ridley): Um argumento convincente de que o otimismo é essencial para o progresso humano.\n> * **A Ilusionista** (Sylvain Neuvel): Um romance de ficção científica que explora as consequências éticas da inteligência artificial.\n> \n> **Selo Suma:**\n> \n> * **Homo Deus** (Yuval Noah Harari): Uma visão provocativa do futuro da humanidade e o impacto da tecnologia.\n> * **21 Lições para o Século 21** (Yuval Noah Harari): Um guia essencial para navegar pelos desafios e oportunidades do século XXI.\n> * **Sapiens** (Yuval Noah Harari): Uma história abrangente da humanidade, desde suas origens até o presente.\n> \n> **Selo Penguin:**\n> \n> * **O Algoritmo do Amor** (Jessica Knoll): Um romance contemporâneo que explora o impacto das mídias sociais e da tecnologia em nossos relacionamentos.\n> * **O Código da Cultura** (Francis Fukuyama): Uma análise das forças que moldam a cultura e a sociedade.\n> * **O Quarto de Jack** (Emma Donoghue): Um romance comovente que conta a história de um menino que passou toda a sua vida confinado em um quarto."
+            "text/markdown": "> **model**: {\n>  [\n>    {\"index\": 0, \"title\": \"Nudge\", \"author\": \"Richard H. Thaler, Cass R. Sunstein\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41-4KB39FEL._SX329_BO1,204,203,200_.jpg\", \"description\": \"Como o livro 'Rápido e Devagar', 'Nudge' explora a psicologia da tomada de decisão e como podemos usar esse conhecimento para melhorar nossas escolhas.\"},\n>    {\"index\": 1, \"title\": \"Viver com Risco\", \"author\": \"Alison Schrager\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41p0KH0-3CL._SX331_BO1,204,203,200_.jpg\", \"description\": \"Semelhante a 'Rápido e Devagar', 'Viver com Risco' examina como lidamos com a incerteza e o risco, fornecendo insights valiosos sobre como tomar decisões informadas.\"},\n>    {\"index\": 2, \"title\": \"Preparados para o Risco\", \"author\": \"Gerd Gigerenzer\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41-4KB39FEL._SX329_BO1,204,203,200_.jpg\", \"description\": \"Como 'Rápido e Devagar', 'Preparados para o Risco' explora os vieses cognitivos e heurísticas que influenciam nossas decisões, oferecendo estratégias para tomar melhores escolhas.\"}\n>  ]\n> }"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------------------------------\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "> **user**: Livreiro: Sherlock Holmes"
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-------------------------------------------\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ],
+            "text/markdown": "> **model**: {\n>  [\n>    {\"index\": 0, \"title\": \"O Alienista\", \"author\": \"Caleb Carr\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41p0KH0-3CL._SX331_BO1,204,203,200_.jpg\", \"description\": \"Como Sherlock Holmes, 'O Alienista' apresenta um detetive brilhante e excêntrico que resolve crimes complexos em uma cidade do século XIX.\"},\n>    {\"index\": 1, \"title\": \"O Nome da Rosa\", \"author\": \"Umberto Eco\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41-4KB39FEL._SX329_BO1,204,203,200_.jpg\", \"description\": \"Semelhante a Sherlock Holmes, 'O Nome da Rosa' é um mistério histórico que envolve um detetive perspicaz investigando um crime em um cenário único e atmosférico.\"},\n>    {\"index\": 2, \"title\": \"Assassinato no Expresso do Oriente\", \"author\": \"Agatha Christie\", \"image\": \"https://images-na.ssl-images-amazon.com/images/I/41-4KB39FEL._SX329_BO1,204,203,200_.jpg\", \"description\": \"Como Sherlock Holmes, 'Assassinato no Expresso do Oriente' apresenta um detetive brilhante resolvendo um crime em um ambiente fechado, usando sua inteligência e habilidades dedutivas.\"}\n>  ]\n> }"
           },
           "metadata": {}
         },
@@ -145,7 +200,7 @@
       "metadata": {
         "id": "ZLnp9NhBcyx2"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     }
   ]
